--- a/java/java-cloud-run-hello-world/pom.xml
+++ b/java/java-cloud-run-hello-world/pom.xml
@@ -9,7 +9,7 @@
 
   <parent>
     <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
+    ►►►► Update org.springframework.boot:spring-boot-starter-parent to a version where the transitive dependency org.yaml snakeyaml has version 2.0
     <version>2.7.6</version>
   </parent>
 
